--- a/.github/workflows/ttnode.yml
+++ b/.github/workflows/ttnode.yml
@@ -18,6 +18,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Login to build and push
         run: |
-           docker login -u ${{ secrets.USERNAME }} -p ${{ secrets.TOKEN }}
+           cat ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USERNAME }} --password-stdin
            docker build -t ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }} .
            docker push ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }}
