downgrade(ttnode): to version 1.0.0.355
Consistent with tiptime/ttnode:latest

add(ttnode.yml): tag v1.0.0.355
docs(README.md): add ttnode version

--- a/.github/workflows/ttnode.yml
+++ b/.github/workflows/ttnode.yml
@@ -11,7 +11,7 @@ jobs:
   docker:
     strategy:
       matrix:
-        tag: [latest]
+        tag: [latest, v1.0.0.355]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 
