--- a/.github/workflows/ttnode.yml
+++ b/.github/workflows/ttnode.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Login, build and push
         run: |
-           chmod +x entrypoint.sh token ttnode signin 
+           chmod +x entrypoint.sh signin token ttnode
            echo ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USERNAME }} --password-stdin
            docker build -t ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }} .
            docker push ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }}
