--- a/.github/workflows/ttnode.yml
+++ b/.github/workflows/ttnode.yml
@@ -4,22 +4,19 @@ on:
   push:
 
 env:
-# 镜像名称
-  name: "ttnode"
+  name: ttnode #镜像名称
+  tag: v1.0.0.384 #第二镜像标签
 
 jobs:
   docker:
-    strategy:
-      matrix:
-        tag: [latest, v1.0.0.384]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Login, build and push
         run: |
            chmod +x entrypoint.sh signin token ttnode
            echo ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USERNAME }} --password-stdin
-           docker build -t ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }} .
-           docker push ${{ secrets.USERNAME }}/${{ env.name }}:${{ matrix.tag }}
+           docker build -t ${{ secrets.USERNAME }}/${{ env.name }}:latest -t ${{ secrets.USERNAME }}/${{ env.name }}:${{ env.tag }} .
+           docker push -a ${{ secrets.USERNAME }}/${{ env.name }}
            docker logout
