--- a/.github/workflows/ttnode.yml
+++ b/.github/workflows/ttnode.yml
@@ -4,8 +4,8 @@ on:
   push:
 
 env:
-  name: ttnode #镜像名称
-  tag: v1.0.0.384 #第二镜像标签
+  NAME: ttnode #镜像名称
+  TAG: v1.0.0.384 #第二镜像标签
 
 jobs:
   docker:
@@ -13,10 +13,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Login, build and push
-        run: |
-           chmod +x entrypoint.sh signin token ttnode
-           echo ${{ secrets.TOKEN }} | docker login -u ${{ secrets.USERNAME }} --password-stdin
-           docker build -t ${{ secrets.USERNAME }}/${{ env.name }}:latest -t ${{ secrets.USERNAME }}/${{ env.name }}:${{ env.tag }} .
-           docker push -a ${{ secrets.USERNAME }}/${{ env.name }}
-           docker logout
+        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: waterlemons2k
+          password: ${{ secrets.TOKEN }}
+          
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: |
+            waterlemons2k/${{ env.NAME }}:latest
+            waterlemons2k/${{ env.NAME }}:${{ env.TAG }}
